--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
