--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.1",
+    "dayjs": "^1.11.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
