--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.74.1",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-heroicons": "^4.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
