--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-element-dropdown": "^2.12.0",
+    "react-native-gifted-charts": "^1.4.10",
     "react-native-heroicons": "^4.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
