--- a/package.json
+++ b/package.json
@@ -10,9 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.3",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-firebase/firestore": "^22.4.0",
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/bottom-tabs": "^7.4.4",
+    "@react-navigation/material-top-tabs": "^7.3.4",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/native-stack": "^7.3.23",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
+    "react": "^19.1.0",
+    "react-native": "^0.80.2",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-gifted-charts": "^1.4.63",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-pager-view": "^6.8.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-snackbar": "^2.9.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
